@startuml IngredientClassDiagram
hide empty members

class Main {
  - {static} User : user
  - {static} Stage : stage
  + main()
  + redirect()
  + start()
}

class IngredientController {
  - IngredientFacade : ingredientFacade
  - ListView<Ingredient> : ingredientList
  - Stage : secondaryStage
  - ListCell<Ingredient> : cellFactory()
  - addImageIngredient() : byte[]
  - recupImage(): byte[]
  - showForm()
  + showFormCreate()
  + showFormUpdate()
  + createIngredient()
  + deleteIngredient()
  + updateIngredient()
  + fetchList()
  + initialize()

}


class IngredientFacade {
  - IngredientDAO : ingredientDAO
  + createIngredient() : boolean
  + updateIngredient() : boolean
  + deleteIngredient()
  + getIngredientById() : Ingredient
  + getIngredientsIdByNames() : List<Integer>
}


interface AbstractFactory {
  + {abstract} getIngredientDAO() : IngredientDAO

}


class PostgresFactory {
  + getPostgresFactory(): PostgresFactory
  + get IngredientDAO() : IngredientDAO
}


Interface IngredientDAO {
  + {abstract} getPostgresIngredientDAO() : IngredientDAO
  + {abstract} createIngredient() : boolean
  + {abstract} updateIngredient() : boolean
  + {abstract} deleteIngredient()
  + {abstract} getIngredientById() : Ingredient
  + {abstract} getIngredientByName() : Ingredient
  + {abstract} getIngredientsIdByNames() : List<Integer>
  + {abstract} ingredientAlreadyExist() : boolean
}


class PostgresIngredientDAO{
  + getPostgresIngredientDAO() : IngredientDAO
  + createIngredient() : boolean
  + updateIngredient() : boolean
  + deleteIngredient()
  + getIngredientById() : Ingredient
  + getIngredientByName() : Ingredient
  + getIngredientsIdByNames() : List<Integer>
  + ingredientAlreadyExist() : boolean

}


class ConnectionManager {
  - {static} PGConnectionPoolDataSource: DataSource
  + {static} openConnectionPool(): void
  + {static} getConnection(): Connection
  + {static} closeConnectionPool(): void
}

PostgresFactory -u-|> AbstractFactory
PostgresIngredientDAO     -l-|> IngredientDAO

Main                      "1" -r-> "1" IngredientController: <  controls
IngredientController      "1" -r-> "1" IngredientFacade: > interact with
IngredientFacade          "1" --> "1" AbstractFactory: > uses
PostgresFactory           "1" --> "1" PostgresIngredientDAO: > create
PostgresIngredientDAO     "1" --> "1" ConnectionManager:> get connection from
@enduml